# CBS_BA_Copilot

./: .gitignore  README.md  copilot.py  pyproject.toml  requirements.txt  streamlit_app.py
